<resources>
    <string name="app_name">The Loot Basketball</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">The Loot Basketball</string>
    <string name="nav_header_subtitle">thelootbasketball@gmail.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="action_admin">Admin</string>

    <string name="menu_home">Home</string>
    <string name="menu_schedule">Schedule</string>
    <string name="menu_teams">Teams</string>
    <string name="back_button">Back_Button</string>
    <string name="forward_button">Forward_Button</string>

    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="Register">Register</string>
    <string name="AddTeam">Add Team</string>
    <string name="Registration">Need an Account?</string>
    <string name="Team">Team</string>
    <string name="TeamName">Team Name</string>
    <string name="Division">Division</string>
    <string name="Player">Player</string>
    <string name="Schedule">Schedule</string>
    <string name="UpdateTeam">Update Team</string>
    <string name="DeleteTeam">Delete Team</string>

    <string-array name="team_array">
        <item>-Please Select-</item>
        <item>Create Team</item>
        <item>Update Team</item>
        <item>Delete Team</item>
    </string-array>



    <string name="Test">Test</string>
</resources>
